  play anything. This works in the case of damaging npc parties, too (for
  example with ship cannons) because npc party damage calls the character
  damage routines. In the examples I modified all species to play the old
  traditional damage sound.
--Added sound attenuation with distance (hearing the nixies splash around gets
  really annoying when you can't get away from it - need to find some better
  sounds). I only made it apply in party mode because in combat mode it's a bit
  trickier for the code that's playing the sound to figure out which party
  member it needs to calculate the distance from. Since dungeons are not party
  mode I'll probably want to reconsider how to do that.

--Added a COMBAT section to the script. Currently this is only used to declare
  the sound files used in combat for events like entry, defeat and victory.

--Fixed a bug introduced when I fixed cannons firing in town. The npc code was
  not properly incrementing turns when it fired cannons.

--When npc vehicle weapons hit an npc party it was printing "You hit ", as if
  the player was doing the firing. Changed the message from "you" to whatever
  the name of the weapon being fired.

--Fixed a crash that occurred on startup if the --sound 0 option was
  specified.

--Fixed a memory leak. NpcParty objects were not being deleted after combat
  except in the case where the NpcParty initiated combat. Added a new flag to
  the NpcParty class: 'destroy_on_combat_exit'. By default it is true. In the
  case where the NpcParty initiates combat it sets it to false before entering
  combat. After combat the NpcParty will be deleted once it returns to the code
  in place.c which updates objects every turn.

--Added a campsite map, campsite formation and party formation to the examples
  file. Increased the light from a fireplace, too.

--Added a new function in map: mapTileIsVisible checks if a tile is visible
  under the LOS rules.

--Added start of a new town: Green Tower
