@@ -3843,70 +3843,70 @@ MAP GreenTower_Map {
         one_char_per_tile 1;
         palette { '_' t_deep; '-' t_shallow; '~' t_shoals; '%' t_bog; '.' t_grass; 't' t_trees; '|' t_forest; '{' t_hills; '^' t_mountains; ',' t_flagstones; 'c' t_cobblestone; 'e' t_deck; '=' t_bridge; 'g' t_bridge_top; 'h' t_bridge_bottom; 'f' t_fire_terrain; '!' t_lava; '&' t_fireplace; 'x' t_wall; '?' t_secret_door; 'p' t_pillar; 'b' t_boulder; 'r' t_wall_rock; 'A' t_A; 'B' t_B; 'C' t_C; 'D' t_D; 'E' t_E; 'F' t_F; 'G' t_G; 'H' t_H; 'I' t_I; 'J' t_J; 'K' t_K; 'L' t_L; 'M' t_M; 'N' t_N; 'O' t_O; 'P' t_P; 'Q' t_Q; 'R' t_R; 'S' t_S; 'T' t_T; 'U' t_U; 'V' t_V; 'W' t_W; 'X' t_X; 'Y' t_Y; 'Z' t_Z; 'q' t_rune_Q; '@' t_counter_middle; '[' t_counter_left; ']' t_counter_right; '0' t_counter_1x1; '+' t_ankh; 'a' t_altar; '<' t_leftwing; '>' t_rightwing; };
         terrain {
-    |||||||||||||||||||||||||||||tb...bt|||||||||||||||||||||||tttt|
-    |||||||||||||||||||||||||||||tt...tt|||||||||||||||||||||ttt..t|
-    |||||||||||||||||||||||||||||tb...b|||||||||.........|||tt|tt.t|
-    ||||||||||||||||||||||||||||ttt........|||||.|||||||.tttt||tttt|
-    ||||||||||||||||||||||||||||tb...b||||.|||||.|||||||.||||||||t||
-    |||||||||||||||||||||||||||tt....t||||.|||||.|||||||.|||||||tt||
-    |||||||||||||||||||||||||||b.....|||||.|||||.||......ttttt||t|||
-    ||||||||||||||||||||||||||tt....b|||||....||.||.xxxx.xxxxttttt||
-    ||||||||||||||||||||||||||tb....t||||||||....||.x.......xtt..t||
-    |||||||||||||||||||||||||tt....bt|||||||||||t||.0.......0tt..t||
-    |||||||||||||||||||||||||tb....tt|||||||||||t||.x@@@@@@@xtt..t||
-    |||||||||||||||||||||||||tt....bt|||||||ttttt||.x.......x|tttt||
-    |||||||||||||||||||||||||tb....tt|||||||t.ttt||.xSHROOMSx|||||||
-    ||||||||||||||||||||||||ttt....bt||||tttt..t|||.xxxxxxxxx|||||||
-    ||||||||||||||||||||||||tb.....ttt|||t||ttttttt.x...x...x|||||||
-    ||||||||||||||||||||||ttt.......bt|||t|||||||||.x...?...?|||ttt|
-    ||||||||||||||||||||||tb........ttt||t||||||||||x...x...x||tt|t|
-    ||||||||||||||||||||ttt..........btttt||||||||||xx0xxx?xx||t||tt
-    ||||||||||||||||||tttb.............bttttt|||||||||||||t||||t||||
-    ||||||||||||||||tttb................tbtbttt|||||||||||tt|||tt|||
-    |||||||||||||||ttb.....btbtbtb...........btt|||||||||||tt|||t|||
-    ||||||||||||||tt......tttttttttbt..........tttt|||||||||ttt|t|||
-    ||||||||||||tttb.....bt|||||||tttb..........tttt||||||||||ttt|||
-    ||||||||||||tb......ttt||||||||ttttttb........bt||||||||||||||||
-    |||||||||||tt......bt||||||||||tt||ttttb.......tt|||||||||||||||
-    |||||||||||t......ttt||||||tttttttt|||tttb.....bt|||||||||||||||
-    ||||||||||ttb....bt|||||||tttttttttt||||tttbt...t|||||||||||||||
-    |||||||||tt.....ttt||||||ttttxxxxtttt|||||tttb..b||||||ttttt||||
-    |||||||tttb....bt||||||tttxxxxccxxxxttt||||ttt..t||||tttbtbttttt
-    t||||||tb......tt|||||ttxxxccccccccxxxtt||||tb..bt|||tbt.....btb
-    tttttttt.......tt|||||txxccccccccccccxxt||||tt....bttt..........
-    ..btbtb........bt||||ttxccccccccccccccxtt|||ttb....tb...btbt....
-    ................ttt||txxcccxxxccxxxcccxxt||||tttt......tttttb...
-    ..........bttb...bttttxcccxxccccccxxcccxtt||||ttb.....tbt||ttt..
-    ........bttttt....tbtbxcccxccccccccxcccxbtttttttt....tttt|||tb..
-    ..btbtbttt|||ttb......xcccxccb..bccxcccx.tbtbtbt.....bt|||||tttb
-    bttttttt||||||ttt.....ccccxcc.tt.ccxcccc.............tt||||||||t
-    tt||||||||||||||tb....ccccxcc.tt.ccxcccc.............tt|||||||||
-    ||||||||||||||||tttbt.xcccxccb..bccxcccx.tbtbt.......bt|||||||||
-    ||||||||||||||||||tttbxcccxccccccccxcccxbttttb........tt||||||||
-    |||||||||||||||||||||txcccxxccccccxxcccxtt|tt....bt...bt||||||||
-    |||||||||||||||||||||txxcccxxxccxxxcccxxt||tb...bttt...tt|||||||
-    |||||||||||||||||||||||xccccccccccccccx||||t....tt|tb..bt|||||||
-    |||||||||||||||||||||||xxccccccccccccxx|||tb...bt||tt..tt|||||||
-    |||||||tttt|||||||||||||xxxccccccccxxx|||tt...t||||tb..bt|||||||
-    |||||trtrrtrr||||||||||||txxxxccxxxx||||tb...b||||ttt..tt|||||||
-    |||rrttt||ttrrr|||||||||tt|||xxxx|tt|||tt...t|||||tb..bt||||||||
-    |||r|||ttt|tt|r|||||||.t|||||||||||||ttb...b|||||tt...tt||||||||
-    ||||tttt..t|tt|rr|||||t||||||||||||ttb....t||||||tb..bt|||||||||
-    |rr|tt|..b.tttt|rr||tt||||||||||||tbt....bt||xxxx0xccx0xxxx|||||
-    ||||tt.....t.tt||r|..||||||||||||tt....bt||||xccccccccccccx|||||
-    |tttt.........tt|tt|||||||||||||tb....t||||||xccccccccccccx|||||
-    |ttt.b.......b.t.t|||||||||||||tt...tbt||||||xcc0cccccc0ccx|||||
-    |||t.....a.....t|r||||||||||||tb...bt||||||||xcc0cc&&cc0ccx|||||
-    |r|tttt......tt||r||||||||||||t...tt|||||||xxxcc0cccccc0ccxxx|||
-    |r|||.t......tt|r||||||||||||tb...b||||||||xccccccccccccccccx|||
-    |rr|tttb...b.tt|r||||||||||||t....t||||||||xccccccccccccccccx|||
-    ||r|ttttt....t|rr||||||||||||b...bt||||||||xccccccccccccccccx|||
-    ||||||||ttttt|tr|||||||||||||t...t|||||||||xccx@@@@@@@@@@xccx|||
-    |||rr|||ttt|tt|r|||||||||||||b...bt||||||||xccxccccccccccxccx|||
-    ||||rr|rrr|rrrr||||||||||||||tt...t||||||||xccxWHITE@STAGxccx|||
-    ||||||||||||||||||||||||||||ttb...b||||||||xxxxxxxxxxxxxxxxxx|||
-    ||||||||||||||||||||||||||||tt....tt||||||||||||||||||||||||||||
-    ||||||||||||||||||||||||||||tb.....bt|||||||||||||||||||||||||||
+    |||||||||||||||||||||||||||||tb...bt||||||||||||||||||||||||||||
+    |||||||||||||||||||||||||||||tt...tt||||||||||||||||||||||||||||
+    ||rrrrr||rrrrr|||||||||||||||tb...bt||||||||||||xxxxxxxxxtt|||||
+    ||rcccr||rcccr||||||||||||||ttt...tt||||||||||||x.......xttt||||
+    ||rcccr||rcccr||||||||||||||ttb.........................0ttt||||
+    ||rcccr||rcccr|||||||||||||tttt...bt||||||||||||x@@@@@@@xttt||||
+    ||rrcrr||rrcrr|||||||||||||tttb...tt|||||||||||tx.......xtt|||||
+    ||||.||||||.||||||||||||||ttttt...tt|||||||||||txSHROOMSx|||||||
+    ||||........||||||||||||||ttttb...bt|||||||||tttxxxxxxxxx|||||||
+    ||||||||.||||||||||||||||tttttt...tt||||||||ttttx...x...x|||||||
+    ||||||||.||||||||||||||||tttttb...bt||||||||tttt....?...?ttttttt
+    ||rrrrr|.............||||tttttt...tt||||ttttt||tx...x...x|||||||
+    ||rcccr|.|||||||||||.||||tttttb...bt||||t.ttt||txx0xxx?xx|||||||
+    ||rcccc..|||||||||||.|||ttttttt...tt|tttt..t|||t||||||||||||||||
+    ||rcccr|||||||||||||.|||ttttttb...bt|t||ttttttt.||||||||||||||||
+    ||rrrrr|||||||||||||.|ttttttttt...tt|t|||||||||.||||||||||||||||
+    ||||||||||||||||||||.|ttttttttb...bttttttttttttt||||||||||||||||
+    ||||||||||||||||||tb.b.btbtbtb.....tbtbttbtbtbtt||||||||||||||||
+    ||||||||||||||||||t............................tt|||||||||||||||
+    ||||||||||||||||||b............................|t|||||||||||||||
+    ||||||||||||||||||t............................tt|||||||||||||||
+    ||||||||||||||||||b.....btbtbt......bttbtbt....bt|||||||||||||||
+    ||||||||||||||||||t....tttttttb....bttttttbt...tt|||||||||||||||
+    ||||||||||||||||||b...bt|||||ttxccxtt|||||tt...bt|||||||||||||||
+    |||||||||||||||||||...tt||||xxxxccxxxx||||tb...tt|||||||||||||||
+    ||||||||||||||||||b...bt||xxxccccccccxxx||tt...bt|||||||||||||||
+    |||||||||||||||||||...tt|xxccccccccccccxx|tb...tt|||||||||||||||
+    ||||||||||||||||||b...bt|xccccccccccccccx|tt...tt|||||||||||||||
+    ttt|||||||||||||||t...ttxxcccxxxccxxxcccxxtb...bt||||||||||||||t
+    btttttttttttttttttb...btxcccxx|tcct|xxcccxtt...tt||||||||||||||t
+    ..btbtbtbtbtbtbtbt....tbxcccx|t.cc.t|xcccxb....bt||||||||||||||t
+    ........................xcccxt.bccb.txcccx.....ttttttttttttttttt
+    ........................cccccccccccccccccc......................
+    ........................cccccccccccccccccc......................
+    ..btbtbtbtbtbttbtb......xcccxt.bccb.txcccx.....ttttttttttttttttt
+    btttttttttttttttttt....bxcccx|t.cc.t|xcccxb....bt|||||||||||tttt
+    tt||||tttttttt|||tt....txcccxx|tcct|xxcccxt....tt||||||||||||||t
+    tt||||tttttttt|||tb...btxxcccxxxccxxxcccxxtb...bt|||||||||||||||
+    |||||||ttttttt|||tt...tt|xccccccccccccccx|tt...tt|||||||||||||||
+    ||||||||tttttt|||tb...bt|xxccccccccccccxx|tb...bt|||||||||||||||
+    |||||||||||||||||tt...tt||xxxccccccccxxx||tt...tt|||||||||||||||
+    |||||||||||||||||tb...bt||||xxxxccxxxx||||tb...bt|||||||||||||||
+    ||||||||||||||r|rtt...tt|||||ttxccxtt||||ttt...tt|||||||||||||||
+    |||||||||||||||||tb...btttttttb....btttttttb...bttttttt|||||||||
+    |||||||tttt||||||tt....tbtbtb........btbtbt.....tbtbtbt|||||||||
+    |||||trtrrtrr||||tb..................................tt|||||||||
+    |||rrttt||ttrrr||tt..................................bt|||||||||
+    |||r|||ttt|tt|r|||b..................................tt|||||||||
+    ||||tttt..t|tt|rr||tbtbtbtbtbtbt..tbtbtbtbtbtbtbttb..bt|||||||||
+    |rr|tt|..b.tttt|rr|ttttttttttttt..tttttttttttxxxx0xccx0xxxx|||||
+    ||||tt.....t.tt||r||||||||||||||..t||||||||||xccccccccccccx|||||
+    |tttt.........tt|tt|||||||||||||..t||||||||||xccccccccccccx|||||
+    |ttt.b.......b.t.tttttt|||||||||..t||||||||||xcc0cccccc0ccx|||||
+    |||t.....a.....t|r||||t|||||||||..t||||||||||xcc0cc&&cc0ccx|||||
+    |r|tttt......tt||r||||t|||||||||..t||||||||xxxcc0cccccc0ccxxx|||
+    |r|||.t......tt|r|||rrtrr||||t||..t||||||||xccccccccccccccccx|||
+    |rr|tttb...b.tt|r||rrtttrr|||t||..t||||||||xccccccccccccccccx|||
+    ||r|ttttt....t|rr||rtt|t|r|||t||..t||||||||xccccccccccccccccx|||
+    ||||||||ttttt|tr|||rt||||r|||ttt..|||||||||xccx@@@@@@@@@@xccx|||
+    |||rr|||ttt|tt|r|||rtt|||r|||ttt..t||||||||xccxccccccccccxccx|||
+    ||||rr|rrr|rrrr||||rr|||tr|||ttt..t||||||||xccxWHITE@STAGxccx|||
+    ||||||||||||||||||||rrrrt|||tttt..t||||||||xxxxxxxxxxxxxxxxxx|||
+    ||||||||||||||||||||||||||||tttt..tt||||||||||||||||||||||||||||
+    ||||||||||||||||||||||||||||ttt....tt|||||||||||||||||||||||||||
     }
 }
 PLACE GreenTower {
@@ -4000,7 +4000,7 @@ moon_info {
     }
   }
   sun {
-    arc 150;
+    arc 61;
     sprite s_sun;
   }
   moongates {
@@ -4119,9 +4119,9 @@ FORMATION f_football {
         . . . 2 . 4 . . .
 }
 player {
-  place p_wilderness;
-  x 35;
-  y 22;
+        place p_empire_city;
+        x 42;
+        y 34;
   sprite s_companion_wizard;
   speed 2;
   mv_desc Walk;
